--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -1793,6 +1793,20 @@
   mrclass: '43A30 (22E25 43A10)'
   volume: '26'
 
+- number: '1'
+  author: 'Kumar, Manoj'
+  fjournal: 'Pacific Journal of Mathematics'
+  url: 'https://doi.org/10.2140/pjm.2024.328.137'
+  pages: '137-143'
+  year: '2024'
+  title: 'Pego theorem on compact groups'
+  doi: '10.2140/pjm.2024.328.137'
+  issn: '0030-8730,1945-5844'
+  journal: 'Pacific J. Math.'
+  mrnumber: '4732760'
+  mrclass: '43A30 (22C05 43A77)'
+  volume: '328'
+
 - number: '6'
   author: 'Gayen, Rupanwita and Mandal, B. N. and Chakrabarti, A.'
   fjournal: 'IMA Journal of Applied Mathematics'
@@ -4782,20 +4796,6 @@
   mrclass: '32M05 (20B27)'
   volume: '40'
 
-- number: '4'
-  author: 'Ray, Samya Kumar and Sarkar, Srijan'
-  fjournal: 'Canadian Mathematical Bulletin. Bulletin Canadien de Math&eacute;matiques'
-  url: 'https://doi.org/10.4153/s0008439523000322'
-  pages: '1244-1254'
-  year: '2023'
-  title: 'A note on the column-row property'
-  doi: '10.4153/s0008439523000322'
-  issn: '0008-4395,1496-4287'
-  journal: 'Canad. Math. Bull.'
-  mrnumber: '4658216'
-  mrclass: '47L25'
-  volume: '66'
-
 - number: '3'
   author: 'Maity, Soma'
   fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
@@ -5308,6 +5308,33 @@
   mrnumber: '2074318'
   mrclass: '76W05 (76A20 76U05)'
   volume: '42'
+
+- number: '7'
+  author: 'Das, Soumya and Krishna, Hariram'
+  fjournal: 'International Mathematics Research Notices. IMRN'
+  url: 'https://doi.org/10.1093/imrn/rnad322'
+  pages: '6140-6175'
+  year: '2024'
+  title: 'Bounds for the Bergman kernel and the sup-norm of holomorphic Siegel cusp forms'
+  doi: '10.1093/imrn/rnad322'
+  mrclass: '32N10 (11F46 32A25)'
+  issn: '1073-7928,1687-0247'
+  journal: 'Int. Math. Res. Not. IMRN'
+  mrnumber: '4728730'
+
+- number: '4'
+  author: 'Ray, Samya Kumar and Sarkar, Srijan'
+  fjournal: 'Canadian Mathematical Bulletin. Bulletin Canadien de Math&eacute;matiques'
+  url: 'https://doi.org/10.4153/s0008439523000322'
+  pages: '1244-1254'
+  year: '2023'
+  title: 'A note on the column-row property'
+  doi: '10.4153/s0008439523000322'
+  issn: '0008-4395,1496-4287'
+  journal: 'Canad. Math. Bull.'
+  mrnumber: '4658216'
+  mrclass: '47L25'
+  volume: '66'
 
 - number: '1'
   author: 'Dasgupta, Samit and Kakde, Mahesh'
@@ -8300,6 +8327,20 @@
   mrnumber: '3296015'
   mrclass: '11F50 (11F11 11F25)'
   volume: '149'
+
+- number: '1'
+  author: 'Kar, Debaprasanna'
+  fjournal: 'Analysis Mathematica'
+  url: 'https://doi.org/10.1007/s10476-024-00013-0'
+  pages: '215-233'
+  year: '2024'
+  title: 'Weighted boundary limits of the Kobayashi-Fuks metric on h-extendible domains'
+  doi: '10.1007/s10476-024-00013-0'
+  issn: '0133-3852,1588-273X'
+  journal: 'Anal. Math.'
+  mrnumber: '4740662'
+  mrclass: '32F45 (32A25 32A36)'
+  volume: '50'
 
 - author: 'Choudhury, Projesh Nath and Eagambaram, N. and Sivakumar, K. C. and Sushmitha, P.'
   fjournal: 'Linear Algebra and its Applications'
@@ -12392,6 +12433,18 @@
   mrclass: '90D26 (49A45)'
   volume: '59'
 
+- number: '8'
+  author: 'Jana, Suvendu and Bhunia, Pintu and Paul, Kallol'
+  fjournal: 'Univerzitet u Ni&#353;u. Prirodno-Matemati&#263;ki Fakultet. Filomat'
+  pages: '2587-2599'
+  year: '2024'
+  title: 'Refinements of generalized Euclidean operator radius inequalities of 2-tuple operators'
+  issn: '0354-5180,2406-0933'
+  journal: 'Filomat'
+  mrnumber: '4724769'
+  mrclass: '47A12 (47A30 47A50)'
+  volume: '38'
+
 - number: '4'
   author: 'Datar, Ved V. and Pingali, Vamsi Pritham'
   fjournal: 'The Journal of Symplectic Geometry'
@@ -15029,18 +15082,6 @@
   journal: 'J. Stat. Mech. Theory Exp.'
   mrnumber: '4535561'
 
-- number: '8'
-  author: 'Mohan Kumar, N. and Rao, A. P. and Ravindra, G. V.'
-  fjournal: 'International Mathematics Research Notices. IMRN'
-  pages: 'Art. ID rnm025, 11'
-  year: '2007'
-  mrreviewer: 'Carlo Giovanni Madonna'
-  title: 'Arithmetically Cohen-Macaulay bundles on three dimensional hypersurfaces'
-  mrclass: '14J60 (14J70)'
-  issn: '1073-7928'
-  journal: 'Int. Math. Res. Not. IMRN'
-  mrnumber: '2340104'
-
 - number: '1-4'
   author: 'Tikekar, V. G.'
   fjournal: 'Gaita-Bh\=arat\=\i . Indian Society for History of Mathematics. Bulletin'
@@ -15247,6 +15288,32 @@
   mrnumber: '2470841'
   mrclass: '53C21'
   volume: '137'
+
+- number: '8'
+  author: 'Mohan Kumar, N. and Rao, A. P. and Ravindra, G. V.'
+  fjournal: 'International Mathematics Research Notices. IMRN'
+  pages: 'Art. ID rnm025, 11'
+  year: '2007'
+  mrreviewer: 'Carlo Giovanni Madonna'
+  title: 'Arithmetically Cohen-Macaulay bundles on three dimensional hypersurfaces'
+  mrclass: '14J60 (14J70)'
+  issn: '1073-7928'
+  journal: 'Int. Math. Res. Not. IMRN'
+  mrnumber: '2340104'
+
+- number: '2'
+  author: 'Banik, Annapurna'
+  fjournal: 'Journal of Mathematical Analysis and Applications'
+  url: 'https://doi.org/10.1016/j.jmaa.2024.128382'
+  pages: 'Paper No. 128382, 22'
+  year: '2024'
+  title: 'Local continuous extension of proper holomorphic maps: low-regularity and infinite-type boundaries'
+  doi: '10.1016/j.jmaa.2024.128382'
+  issn: '0022-247X,1096-0813'
+  journal: 'J. Math. Anal. Appl.'
+  mrnumber: '4732912'
+  mrclass: '32H35 (32F45)'
+  volume: '537'
 
 - author: 'Teja, G. Krishna'
   fjournal: 'S&eacute;minaire Lotharingien de Combinatoire'
@@ -16475,6 +16542,20 @@
   journal: 'Int. Math. Res. Not. IMRN'
   mrnumber: '4565708'
 
+- number: '1'
+  author: 'Gupta, Rahul and Krishna, Amalendu and Rathore, Jitendra'
+  fjournal: 'Annali della Scuola Normale Superiore di Pisa. Classe di Scienze. Serie V'
+  url: 'https://doi.org/10.2422/2036-2145.20211_018'
+  pages: '449-482'
+  year: '2024'
+  title: 'A decomposition theorem for 0-cycles and applications'
+  doi: '10.2422/2036-2145.20211\_018'
+  issn: '0391-173X,2036-2145'
+  journal: 'Ann. Sc. Norm. Super. Pisa Cl. Sci. (5)'
+  mrnumber: '4732644'
+  mrclass: '14C25 (14F42 19E15)'
+  volume: '25'
+
 - author: 'Mukherji, Purabi'
   url: 'https://doi.org/10.1007/978-981-15-9620-9'
   mrnumber: '4242221'
@@ -16942,21 +17023,6 @@
   mrclass: '53C25 (30G35 53C12)'
   volume: '17'
 
-- number: '2'
-  author: 'Ghosh, Mrinal K. and Goswami, Anindya and Kumar, Suresh K.'
-  fjournal: 'Applied Mathematics and Optimization'
-  url: 'http://dx.doi.org/10.1007/s00245-009-9074-0'
-  pages: '275-296'
-  year: '2009'
-  mrreviewer: 'U Jin Choi'
-  title: 'Portfolio optimization in a semi-Markov modulated market'
-  doi: '10.1007/s00245-009-9074-0'
-  issn: '0095-4616'
-  journal: 'Appl. Math. Optim.'
-  mrnumber: '2524690'
-  mrclass: '91G10 (60K15)'
-  volume: '60'
-
 - number: '7'
   author: 'Biswas, Chandan'
   fjournal: 'Complex Variables and Elliptic Equations. An International Journal'
@@ -17199,6 +17265,35 @@
   mrnumber: '1383042'
   mrclass: '76L05'
   volume: '75'
+
+- number: '2'
+  author: 'Bhunia, Pintu and Mal, Arpita'
+  fjournal: 'Banach Journal of Mathematical Analysis'
+  url: 'https://doi.org/10.1007/s43037-024-00342-0'
+  pages: 'Paper No. 31, 19'
+  year: '2024'
+  title: 'Norm inequalities in $\mathcal L(\mathcal X)$ and a geometric constant'
+  doi: '10.1007/s43037-024-00342-0'
+  issn: '2662-2033,1735-8787'
+  journal: 'Banach J. Math. Anal.'
+  mrnumber: '4732295'
+  mrclass: '47A30 (46B20 47A12 47L05)'
+  volume: '18'
+
+- number: '2'
+  author: 'Ghosh, Mrinal K. and Goswami, Anindya and Kumar, Suresh K.'
+  fjournal: 'Applied Mathematics and Optimization'
+  url: 'http://dx.doi.org/10.1007/s00245-009-9074-0'
+  pages: '275-296'
+  year: '2009'
+  mrreviewer: 'U Jin Choi'
+  title: 'Portfolio optimization in a semi-Markov modulated market'
+  doi: '10.1007/s00245-009-9074-0'
+  issn: '0095-4616'
+  journal: 'Appl. Math. Optim.'
+  mrnumber: '2524690'
+  mrclass: '91G10 (60K15)'
+  volume: '60'
 
 - author: 'Nandakumaran, A. K.'
   fjournal: 'Electronic Journal of Differential Equations'
@@ -17589,20 +17684,6 @@
   mrclass: '43A85 (22E30 26A33)'
   volume: '282'
 
-- number: '6'
-  author: 'Bhunia, P. and Garayev, M. T. and Paul, K. and Tapdigoglu, R.'
-  fjournal: 'Complex Analysis and Operator Theory'
-  url: 'https://doi.org/10.1007/s11785-023-01404-1'
-  pages: 'Paper No. 96, 15'
-  year: '2023'
-  title: 'Some new applications of Berezin symbols'
-  doi: '10.1007/s11785-023-01404-1'
-  issn: '1661-8254,1661-8262'
-  journal: 'Complex Anal. Oper. Theory'
-  mrnumber: '4627304'
-  mrclass: '47A63 (47B32)'
-  volume: '17'
-
 - number: '1'
   author: 'Maitra, Anwoy'
   fjournal: 'Journal of Mathematical Analysis and Applications'
@@ -17830,6 +17911,34 @@
   mrnumber: '4282085'
   mrclass: '60K35 (60B20 60F15)'
   volume: '242'
+
+- number: '6'
+  author: 'Bhunia, P. and Garayev, M. T. and Paul, K. and Tapdigoglu, R.'
+  fjournal: 'Complex Analysis and Operator Theory'
+  url: 'https://doi.org/10.1007/s11785-023-01404-1'
+  pages: 'Paper No. 96, 15'
+  year: '2023'
+  title: 'Some new applications of Berezin symbols'
+  doi: '10.1007/s11785-023-01404-1'
+  issn: '1661-8254,1661-8262'
+  journal: 'Complex Anal. Oper. Theory'
+  mrnumber: '4627304'
+  mrclass: '47A63 (47B32)'
+  volume: '17'
+
+- number: '2'
+  author: 'Deo, Shaunak V.'
+  fjournal: 'Journal of the Institute of Mathematics of Jussieu. JIMJ. Journal de l&#39;Institut de Math&eacute;matiques de Jussieu'
+  url: 'https://doi.org/10.1017/S1474748023000129'
+  pages: '983-1017'
+  year: '2024'
+  title: 'The Eisenstein ideal of weight $k$ and ranks of Hecke algebras'
+  doi: '10.1017/S1474748023000129'
+  issn: '1474-7480,1475-3030'
+  journal: 'J. Inst. Math. Jussieu'
+  mrnumber: '4719156'
+  mrclass: '11F80 (11F25 11F33)'
+  volume: '23'
 
 - author: 'Roy, Saikat and Senapati, Tanusri and Sain, Debmalya'
   fjournal: 'Linear Algebra and its Applications'
@@ -18876,6 +18985,20 @@
   mrnumber: '3175644'
   mrclass: '35B27 (35Q35)'
   volume: '35'
+
+- number: '5'
+  author: 'Biswas, Indranil and Pingali, Vamsi Pritham'
+  fjournal: 'Proceedings of the American Mathematical Society'
+  url: 'https://doi.org/10.1090/proc/16721'
+  pages: '1961-1968'
+  year: '2024'
+  title: 'Criteria for the ampleness of certain vector bundles'
+  doi: '10.1090/proc/16721'
+  issn: '0002-9939,1088-6826'
+  journal: 'Proc. Amer. Math. Soc.'
+  mrnumber: '4728466'
+  mrclass: '14J60 (14F17 32L10)'
+  volume: '152'
 
 - mrnumber: '3966616'
   pages: '87-137'
